fix: correct typos and improve comments in various files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,34 @@
 {
     "cSpell.words": [
-        "atleast",
-        "brotli",
-        "checkperiod",
-        "filesize",
-        "fullchain",
+        "Autoheal",
+        "autoremove",
+        "centurylinklabs",
+        "certresolver",
+        "dpage",
+        "elif",
+        "ffplay",
+        "ffprobe",
         "getplay",
         "getsub",
-        "Kolkata",
+        "healthcheck",
+        "isready",
+        "linuxarm",
+        "logfmt",
+        "noninteractive",
+        "pgadmin",
+        "phantomjs",
         "pornhub",
-        "pornstar",
-        "privkey",
         "purevert",
-        "reinit",
         "sagnikdas",
-        "spankbang",
-        "sublist",
-        "uuidv",
+        "tailsolver",
+        "tini",
+        "traefik",
+        "undownloaded",
+        "UUIDV",
         "vidlist",
-        "ytdiff"
+        "VITE",
+        "websecure",
+        "ytdiff",
+        "YTDLP"
     ]
 }
