--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ HIDE_PORTS=true
 NATIVE_HTTPS_SUPPORT=false
 LOG_LEVELS=debug
 
-# Using a relative path is okey, but a absolute path works best
+# Using a relative path is okay, but a absolute path works best
 SAVE_PATH=/home/sagnik/Videos/yt-dlp/
 HOST_SAVE_PATH=/home/sagnik/Videos/yt-dlp/
 # 0 works but don't use it, please
