--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
   },
   "devDependencies": {
     "@types/cron": "^2.0.1",
-    "csv-parser": "^3.0.0",
-    "newman": "^6.2.1"
+    "csv-parser": "^3.0.0"
   }
 }
