Fixed, we need the cookies to be rw

--- a/.env
+++ b/.env
@@ -20,6 +20,12 @@ BASE_URL=/ytdiff
 HIDE_PORTS=true
 NATIVE_HTTPS_SUPPORT=false
 LOG_LEVELS=debug
+# Cookies file for yt-dlp, if you don't need it, leave it blank
+# Using a relative path is okay, but an absolute path works best
+CONTAINER_COOKIES_FILE=/home/ytdiff/cookies.txt
+HOST_COOKIES_FILE=/home/sagnik/Projects/docker-composes/yt-diff/cookie_secret.txt
+# Max users allowed to sign up, default is 10
+MAX_USERS=10
 
 # Using a relative path is okay, but a absolute path works best
 CONTAINER_SAVE_PATH=/home/ytdiff/Videos/yt-dlp/
