Feat: Fixed some file not getting downloaded due to UNICODE file names, dozzle logs broke due to non-tty env, hopefully this fixes it.

--- a/.env
+++ b/.env
@@ -38,6 +38,8 @@ SAVE_SUBTITLES=true
 SAVE_DESCRIPTION=true
 SAVE_COMMENTS=true
 SAVE_THUMBNAIL=true
+RESTRICT_FILENAMES=true
+#MAX_FILENAME_LENGTH=255
 
 # CRON expression used here, use https://crontab.guru/ for examples
 UPDATE_SCHEDULED=0 */12 * * *
