--- a/.env
+++ b/.env
@@ -19,13 +19,14 @@ PORT=8888
 BASE_URL=/ytdiff
 HIDE_PORTS=true
 NATIVE_HTTPS_SUPPORT=false
-LOG_LEVELS=debug
+LOG_LEVELS=trace
+NO_COLOR=true
 # Cookies file for yt-dlp, if you don't need it, leave it blank
 # Using a relative path is okay, but an absolute path works best
 CONTAINER_COOKIES_FILE=/home/ytdiff/cookies.txt
 HOST_COOKIES_FILE=/home/sagnik/Projects/docker-composes/yt-diff/cookie_secret.txt
-# Max users allowed to sign up, default is 10
-MAX_USERS=10
+# Max users allowed to sign up, default is 15
+MAX_USERS=15
 
 # Using a relative path is okay, but a absolute path works best
 CONTAINER_SAVE_PATH=/home/ytdiff/Videos/yt-dlp/
