--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,7 @@ services:
       - HIDE_PORTS=${HIDE_PORTS}
       - USE_NATIVE_HTTPS=${NATIVE_HTTPS_SUPPORT}
       - LOG_LEVELS=${LOG_LEVELS}
+      - NO_COLOR=${NO_COLOR}
       # Database configuration
       - DB_HOST=${DB_HOST}
       - DB_USERNAME=${DB_USERNAME}
