feat: update settings and documentation for improved clarity and functionality, Will add delete later

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "phantomjs",
         "pornhub",
         "purevert",
+        "sagnikdas",
         "tailsolver",
         "tini",
         "traefik",
