Enhance playlist and video deletion functionality with improved request handling and error messages; add new endpoints for deleting playlists and specific videos.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "autoremove",
         "centurylinklabs",
         "certresolver",
+        "delplay",
+        "delsub",
         "dpage",
         "elif",
         "ffplay",
