--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "SECRET_KEY=ytd1ff DB_PASSWORD=ytd1ff node --watch index.js",
     "pty": "SECRET_KEY=ytd1ff DB_PASSWORD=ytd1ff NO_COLOR=true node --watch index.js",
-    "https": "SECRET_KEY=ytd1ff DB_PASSWORD=ytd1ff PROTOCOL=https USE_NATIVE_HTTPS=true SSL_KEY='./ssl/selfsigned.key' SSL_CERT='./ssl/selfsigned.crt' node --watch index.js",
+    "unrestricted": "SECRET_KEY=ytd1ff DB_PASSWORD=ytd1ff RESTRICT_FILENAMES=false node --watch index.js",
     "cookies": "SECRET_KEY=ytd1ff DB_PASSWORD=ytd1ff COOKIES_FILE=cookie_secret.txt node --watch index.js"
   },
   "repository": {
