feat: update backup configuration in docker-compose and .env files

--- a/.env
+++ b/.env
@@ -31,6 +31,7 @@ MAX_USERS=15
 # Using a relative path is okay, but a absolute path works best
 CONTAINER_SAVE_PATH=/home/ytdiff/Videos/yt-dlp/
 HOST_SAVE_PATH=/home/sagnik/Videos/yt-dlp/
+BACKUP_LOCATION=/home/sagnik/MEGAsync/Databases/yt-db/
 # 0 works but don't use it, please
 SLEEP=3
 # https://github.com/TeamNewPipe/NewPipe/issues/875#issuecomment-347592489
