Renamed the files properly

--- a/.env_pi
+++ b/.env_pi
@@ -31,6 +31,7 @@ MAX_USERS=15
 # Using a relative path is okay, but a absolute path works best
 CONTAINER_SAVE_PATH=/home/ytdiff/Videos/yt-dlp/
 HOST_SAVE_PATH=/mnt/nvme/stuff/yt-diff/
+BACKUP_LOCATION=/mnt/nvme/stuff/misc/yt-db/
 # 0 works but don't use it, please
 SLEEP=3
 # https://github.com/TeamNewPipe/NewPipe/issues/875#issuecomment-347592489
@@ -39,8 +40,8 @@ SAVE_SUBTITLES=true
 SAVE_DESCRIPTION=true
 SAVE_COMMENTS=true
 SAVE_THUMBNAIL=true
-RESTRICT_FILENAMES=true
-#MAX_FILENAME_LENGTH=255
+RESTRICT_FILENAMES=false
+MAX_FILENAME_LENGTH=240
 
 # CRON expression used here, use https://crontab.guru/ for examples
 UPDATE_SCHEDULED=0 */12 * * *
