--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,8 @@ services:
       - SAVE_DESCRIPTION=${SAVE_DESCRIPTION}
       - SAVE_COMMENTS=${SAVE_COMMENTS}
       - SAVE_THUMBNAIL=${SAVE_THUMBNAIL}
+      - RESTRICT_FILENAMES=${RESTRICT_FILENAMES}
+      - MAX_FILENAME_LENGTH=${MAX_FILENAME_LENGTH}
       - COOKIES_FILE=${CONTAINER_COOKIES_FILE}
       - MAX_USERS=${MAX_USERS}
       # Update configuration
