Unrestricted files are no go

--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ SAVE_SUBTITLES=true
 SAVE_DESCRIPTION=true
 SAVE_COMMENTS=true
 SAVE_THUMBNAIL=true
-RESTRICT_FILENAMES=false
+RESTRICT_FILENAMES=true
 MAX_FILENAME_LENGTH=240
 
 # CRON expression used here, use https://crontab.guru/ for examples
