Unlisted item was not getting created successfully

--- a/.env_pi
+++ b/.env_pi
@@ -4,7 +4,6 @@ DB_USERNAME=ytdiff
 DB_NAME=vidlist
 DB_HOST=yt-db
 DB_LOCATION=/home/pi5/Documents/yt-data/
-DB_DUMP_LOCATION=/home/pi5/Documents/yt-db-dumps/
 UID=1000
 GID=1000
 
@@ -26,7 +25,7 @@ NO_COLOR=true
 CONTAINER_COOKIES_FILE=/home/ytdiff/cookies.txt
 HOST_COOKIES_FILE=/home/pi5/Documents/docker-composes/yt-diff/cookie_secret.txt
 # Max users allowed to sign up, default is 15
-MAX_USERS=15
+MAX_USERS=1
 
 # Using a relative path is okay, but a absolute path works best
 CONTAINER_SAVE_PATH=/home/ytdiff/Videos/yt-dlp/
@@ -40,7 +39,7 @@ SAVE_SUBTITLES=true
 SAVE_DESCRIPTION=true
 SAVE_COMMENTS=true
 SAVE_THUMBNAIL=true
-RESTRICT_FILENAMES=false
+RESTRICT_FILENAMES=true
 MAX_FILENAME_LENGTH=240
 
 # CRON expression used here, use https://crontab.guru/ for examples
