--- a/.env
+++ b/.env
@@ -35,11 +35,17 @@ BACKUP_LOCATION=/home/sagnik/MEGAsync/Databases/yt-db/
 SLEEP=3
 # https://github.com/TeamNewPipe/NewPipe/issues/875#issuecomment-347592489
 CHUNK_SIZE_DEFAULT=10
-SAVE_SUBTITLES=true
+# For some reason, subtitles are not being saved properly with certain formats, so disabling it by default
+SAVE_SUBTITLES=false
+# Not saving these as well as these are not that important to me right now
+SAVE_COMMENTS=false
+# Saving description
 SAVE_DESCRIPTION=true
-SAVE_COMMENTS=true
+# These are necessary for proper thumbnail display in the webui
 SAVE_THUMBNAIL=true
+# Having issues with certain filenames, so restricting them
 RESTRICT_FILENAMES=true
+# 255 is the max filename length for ext4 filesystems, but leaving some buffer
 MAX_FILENAME_LENGTH=240
 
 # CRON expression used here, use https://crontab.guru/ for examples
