feat: Integrate Gluetun VPN/proxy service into docker-compose and enable proxy usage in the application.

--- a/.env
+++ b/.env
@@ -47,7 +47,25 @@ SAVE_THUMBNAIL=true
 RESTRICT_FILENAMES=true
 # 255 is the max filename length for ext4 filesystems, but leaving some buffer
 MAX_FILENAME_LENGTH=240
+# Proxy String, make sure there is no space or ! and only 1 @ in the string
+PROXY_STRING=http://proton:n436b5CXcPkrRbKADE1VUhq@gluetun:3128
+# Socks5 eg. - socks5://socks_user:socks_pass@proxy_ip:proxy_port
 
 # CRON expression used here, use https://crontab.guru/ for examples
 UPDATE_SCHEDULED=0 */12 * * *
 TZ_PREFERRED=Asia/Kolkata
+
+#GLUETUN CONF
+#PROVIDER
+SERVICE_PROVIDER_VPN=protonvpn
+FREE=on
+HTTP_PROXY=on
+HTTP_PROXY_LISTENING_ADDRESS=:3128
+# This password being open doesn't matter as the port is exposed only inside the docker subnet
+# HTTP_PROXY_USER=proton
+# HTTP_PROXY_PASSWORD=n436b5CXcPkrRbKADE1VUhq
+HTTP_PROXY_STEALTH=on
+
+# OPENVPN
+#JAPAN
+SERVER_COUNTRIES_PREFERRED=Japan
